Fix alignment of img in ContentCard
- ContentCard img in mobile version is now aligned properly

--- a/src/styles/PublicationsPage.module.less
+++ b/src/styles/PublicationsPage.module.less
@@ -45,7 +45,6 @@
   color: @warm-grey;
   font-size: @font-small-size;
 }
-@import './themes.less';
 
 .pubstarttext {
   text-align: start;
@@ -64,9 +63,11 @@
     flex-direction: column;
     > div {
       margin: 1rem 0;
+      align-items: center;
+      flex: 1.25;
       > img {
         height: 180px;
-        width: 250px
+        width: 250px;
       }
       >div {
         line-height: 3rem;
